[package]
name = "p2p_audio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
cpal = "0.13.4"
ringbuf = "0.2"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stunclient = "0.3.0"
local-ip-address = "0.4.4"
